<resources>
    <string name="app_name">KSW-ToolKit</string>
    <string name="force_sound_in_oem_radio">Force Sound in OEM Radio</string>
    <string name="init_volumes_on_boot">Init Volumes on Boot</string>
    <string name="start_on_boot">Start on Boot</string>
    <string name="sound_restorer_btntext">Sound Restorer</string>
    <string name="event_manager_btntext">Button Mapping</string>
    <string name="system_tweaks_btntext">System Tweaks</string>
    <string name="adb_shell_btntext">Adb Shell</string>
    <string name="mcu_listener">Mcu Listener</string>
    <string name="keep_oem_radio_in_android">Keep OEM Radio in Android</string>
    <string name="start_app">Start App</string>
    <string name="invoke_keyevent">Invoke KeyEvent</string>
    <string name="save">Save</string>
    <string name="do_nothing">Do Nothing</string>
    <string name="switch_sound_source">Switch Sound Source</string>
    <string name="init_mcu_volumes">Init Mcu Volumes</string>
    <string name="unassigned">Unassigned</string>
    <string name="navigation_button">Navigation Button</string>
    <string name="options_button">Options Button</string>
    <string name="back_button">Back Button</string>
    <string name="menu_button">Menu Button</string>
    <string name="knob_turn_right">Knob Turn Right</string>
    <string name="car_radio_buttons">Car Radio Buttons</string>
    <string name="knob_turn_left">Knob Turn Left</string>
    <string name="knob_tilt_right">Knob Tilt Right</string>
    <string name="knob_tilt_left">Knob Tilt Left</string>
    <string name="knob_tilt_down">Knob Tilt Down</string>
    <string name="knob_tilt_up">Knob Tilt Up</string>
    <string name="knob_press">Knob Press</string>
    <string name="drive_knob_buttons">Drive Knob Buttons</string>
    <string name="media_pause">Media Play/Pause</string>
    <string name="media_next">Media Next</string>
    <string name="media_previous">Media Previous</string>
    <string name="telephone_button_hang_up">Telephone HangUp</string>
    <string name="telephone_button_long_press">Telephone Long Press</string>
    <string name="telephone_button">Telephone Button</string>
    <string name="voice_command_button">Voice Command Button</string>
    <string name="steering_wheel_buttons">Steering Wheel Buttons</string>
    <string name="mode_button">Mode Button</string>
    <string name="hide_topbar">Hide Topbar</string>
    <string name="show_topbar">Show Topbar</string>
    <string name="shrink_topbar">Shrink Topbar</string>
    <string name="restore_topbar">Restore Topbar</string>
    <string name="change_dpi">Change DPI</string>
    <string name="show_demo_mode">Show Demo mode</string>
    <string name="enter_command">Enter Command</string>
    <string name="source">Source:</string>
    <string name="stop_ksw_on_boot">Stop KSW on boot</string>
    <string name="ksw_service">Hijack CenterService</string>
    <string name="import_config">Import Config</string>
    <string name="export_config">Export Config</string>
    <string name="restart_system">Restart System</string>
    <string name="assigned">Assigned</string>
    <string name="set_retain_volume_at_boot">Retain volume at Boot</string>
    <string name="auto_volume">Auto Volume</string>
    <string name="start_at_boot">Start at Boot</string>
    <string name="clear_boot_animation">Clear Boot Animation</string>
    <string name="default_dpi_val">160</string>
    <string name="toolkit">Main Menu</string>
    <string name="import_export_config">Import/Export Config</string>
    <string name="brightness">Brightness:</string>
    <string name="car_info">Car-Info</string>
    <string name="radio">Radio</string>
    <string name="aux">AUX</string>
    <string name="dvr">DVR</string>
    <string name="dvd">DVD</string>
    <string name="front_cam">Front Cam</string>
    <string name="open_source">Open Source:</string>
    <string name="frontcam">frontCam</string>
    <string name="screen_off">Screen Off</string>
    <string name="dtv">DTV</string>
    <string name="turn_screen_off">Turn Screen Off</string>
    <string name="send_mcu_command">Send MCU Command</string>
    <string name="volumedec_button">Volume- Button</string>
    <string name="volumeinc_button">Volume+ Button</string>
    <string name="log_car_data">Log Car Data</string>
    <string name="log_mcu_events">Log Mcu Events</string>
    <string name="reroute_navicallouts">Reroute NaviCallouts</string>
    <string name="give_tasker_read_logs_permission">Give Tasker READ_LOGS permission</string>
    <string name="intercept_mcucommmands">Intercept McuCommmands</string>
    <string name="enable_media_tel_button_handling">Media-Button Hack</string>
    <string name="night_brightness">Night brightness</string>
    <string name="sound_restorer">Sound Restorer</string>
    <string name="reset_defaults">Reset Defaults</string>
    <string name="telephone_pickup">Telephone PickUp</string>
    <string name="auto_dark_theme">Auto Dark Theme</string>
    <string name="stop_service">Stop Service</string>
    <string name="start_service">Start Service</string>
    <string name="running">Running…</string>
    <string name="inactive">Inactive</string>
    <string name="uninstalled">Not installed</string>
    <string name="version">Version:</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="download">Download</string>
    <string name="service_status">Service Status:</string>
    <string name="could_not_check_service">Could not check Service</string>
    <string name="could_not_start_service">Could not start Service</string>
    <string name="could_not_stop_service">Could not stop Service</string>
    <string name="unable_to_set_settings">Unable to set settings</string>
    <string name="unable_to_initialize_sevice">Unable to initialize Service</string>
    <string name="unable_to_connect_sevice">Unable to connect to Service</string>
    <string name="not_connected_to_service">Not connected to Service!</string>
    <string name="hicar_app_button">HiCar App Button</string>
    <string name="hicar_voice_button">HiCar Voice Button</string>
    <string name="application_info">Application Info</string>
    <string name="tablet_mode">Tablet Mode</string>
    <string name="hide_start_message">Hide Startup Message</string>
    <string name="error_in_reading_service">Error in reading Service Config</string>
    <string name="unable_to_open_oem_screen">Unable to open OEM Screen!</string>
    <string name="unable_to_open_radio_screen">Unable to open Radio Screen!</string>
    <string name="unable_to_open_f_cam_screen">Unable to open F_CAM Screen!</string>
    <string name="unable_to_open_aux_screen">Unable to open AUX Screen!</string>
    <string name="unable_to_open_dvr_screen">Unable to open DVR Screen!</string>
    <string name="unable_to_open_dvd_screen">Unable to open DVD Screen!</string>
    <string name="unable_to_open_dtv_screen">Unable to open DTV Screen!</string>
    <string name="unable_to_close_screen">Unable to close screen!</string>
    <string name="enable_usb_debugging">Enable USB debugging in Android developer options</string>
    <string name="start_tasker_task">Start Tasker Task</string>
    <string name="tasker_not_installed">Tasker app not found. To install, reinstall KSW-ToolKit</string>
    <string name="tasker_not_enabled">Tasker disabled by the user</string>
    <string name="tasker_access_blocked">Tasker external access disabled</string>
    <string name="tasker_no_permission">Tasker no permitted</string>
    <string name="reset_default_dialog_message">All mappings will reset to defaults. Continue?</string>
    <string name="auto_dark_theme_descpr">Automatically sets Dark/Light theme by daytime or when headlights toggle. For headlight detection, MCU needs to be supported! To determine if your System is compatible, go to MCU listener, turn headlights on and off and check if Light Events show up.</string>
    <string name="auto_volume_descpr">Adjusts Android\'s media volume depending on current driving speed.</string>
    <string name="retain_volume_at_boot_descpr">Retains all previously set audio volumes after successful boot.</string>
    <string name="sound_restorer_descpr">Resets the MCU sound source to Android on every screen switch. This makes it possible to hear Android on OEM screen.</string>
    <string name="additional_media_btn_handle_descpr">Enables some extra hardware buttons. For example on BMW iDrive the Buttons \"Media\" and \"Tel\" will be enabled on Android side. They will be detected as \"MODE\" and \"PHONE\" respectively. Will hinder automatic switching to OEM when reversing!</string>
    <string name="tablet_mode_descpr">Tweaks system DPI to match that of an Android Tablet device. Allows certain Apps to load up in Tablet UI.</string>
    <string name="hide_startup_toast_descpr">Hides KSW-ToolKit\'s startup toast after boot.</string>
    <string name="hide_topbar_descpr">Hides Android\'s TopBar by enabling immersive mode in all Apps. Only works in Android 10!</string>
    <string name="shrink_topbar_descpr">Shrinks top bar slightly.</string>
    <string name="night_brightness_descpr">Sets display brightness when headlights turn on. MCU needs to support headlight detection! To determine if your System is compatible, go to MCU listener, turn headlights on and off and check if Light Events show up.</string>
    <string name="decouple_nav_button">Decouple NAV Button</string>
    <string name="decouple_nav_button_descpr">Allow Navigation button to be used in OEM and Android without triggering screen switches.</string>
    <string name="empty_or_unreadable_file">Empty or unreadable file</string>
    <string name="unable_to_connect_to_service_now">Unable to connect to service now. Please try again later.</string>
    <string name="no_apk_found">No APK found! Please download and install manually!</string>
    <string name="already_up_to_date">Already up to date!</string>
    <string name="error_reading_url">\"Error in reading URL: \"</string>
    <string name="new_service_version_found">\"New Service version found! \"</string>
    <string name="enable_time_based_brightness">Enable time based brightness</string>
    <string name="enable_usb_light_sensor">Enable USB light sensor</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="determine_times_automatically">Automatic detection</string>
    <string name="daylight_brightness">Daylight brightness:</string>
    <string name="daylight_brightness_headlight">Daylight brightness + Headlight:</string>
    <string name="night_brightness_headlight">Night brightness + Headlight:</string>
    <string name="advanced_brightness">Advanced brightness</string>
    <string name="nighttime_brightness">Nighttime brightness:</string>
    <string name="connect_to_service">Connect to Service</string>
    <string name="by_headlights">By headlights</string>
    <string name="by_nighttime">By nighttime</string>
    <string name="automatically_sets_the_map_theme_to_dark_light_in_zlink_given_by_following_options_this_only_works_for_android_auto_carplay_will_depend_on_your_phone">Automatically sets the map theme to dark/light in ZLink given by following options. This only works for Android Auto! CarPlay will depend on your phone.</string>
    <string name="zlink_auto_theme">ZLink Auto Theme</string>
    <string name="automatically_sets_the_android_s_dark_light_theme_given_by_following_options">Automatically sets the Android\'s dark/light theme given by following options.</string>
    <string name="when_headlights_turn_on">When headlights turn on:</string>
    <string name="show_filters">Show Filters</string>
    <string name="hide_filters">Hide Filters</string>
    <string name="clear">Clear</string>
    <string name="no_filters_set">No filters set</string>
</resources>