<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.ConfigImportExport">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/importConfigBtn"
            style="@style/normalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_config"
            android:layout_margin="20dp"/>

        <Button
            android:id="@+id/exportConfigBtn"
            style="@style/normalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_config"
            android:layout_margin="20dp"/>

        <Button
            android:id="@+id/restartSystemBtn"
            style="@style/normalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart_system"
            android:layout_margin="20dp"/>

    </LinearLayout>

</FrameLayout>