<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.KSWToolKit"
    tools:context=".gui.ToolKit">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/service_status"
                    android:textSize="22sp" />
                <TextView
                    android:id="@+id/enableUsbDebuggingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/enable_usb_debugging"
                    android:textColor="#FF4411"
                    android:textSize="22sp"
                    android:textStyle="italic" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/startStopServiceBtn"
                    android:backgroundTint="@color/main_btn_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/start_service"/>
                <ImageView
                    android:id="@+id/runningSymbol"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="5dp"
                    android:background="@mipmap/grey_button"/>
                <TextView
                    android:id="@+id/runningStatusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/uninstalled"/>
                <TextView
                    android:id="@+id/versionLiteralTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="22sp"
                    android:text="@string/version"/>
                <TextView
                    android:id="@+id/versionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text=""/>
                <Button
                    android:id="@+id/updateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/check_for_updates"/>
                <ProgressBar
                    android:id="@+id/progress_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/newerVersionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text=""/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/startAppAtBootTgl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"/>
                    <TextView
                        android:id="@+id/start_at_boot_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_at_boot"
                        style="@style/switchTextStyle"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/openSourceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:text="@string/open_source"/>
            <LinearLayout
                android:id="@+id/openSourceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <LinearLayout
                    android:id="@+id/carInfoBtn"
                    android:background="@drawable/btn_car"
                    android:focusable="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="15dp"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/car_info" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_info"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/radioBtn"
                    android:background="@drawable/btn_radio"
                    android:focusable="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="15dp"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/radio" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/frontCamBtn"
                    android:background="@drawable/btn_front_cam"
                    android:focusable="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="15dp"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/frontcam" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/front_cam"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/auxBtn"
                    android:background="@drawable/btn_aux"
                    android:focusable="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="15dp"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/aux" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aux"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dvrBtn"
                    android:background="@drawable/btn_dvr"
                    android:focusable="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="15dp"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/dvr" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dvr"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dvdBtn"
                    android:background="@drawable/btn_dvd"
                    android:focusable="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="15dp"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/dvd" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dvd"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dtvBtn"
                    android:background="@drawable/btn_tv"
                    android:focusable="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="15dp"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/dtv" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dtv"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
            <!--LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:paddingTop="20dp"
                    android:paddingLeft="20dp"
                    android:text="@string/brightness"/>

                <SeekBar
                    android:id="@+id/brightnessSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:min="0"
                    android:paddingHorizontal="20dp"
                    android:progress="100" />
            </LinearLayout-->

            <Button
                android:id="@+id/screenOffBtn"
                android:backgroundTint="@color/main_btn_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/turn_screen_off"/>


        </LinearLayout>
    </ScrollView>


</FrameLayout>